--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.3.11'
     ext.navigationVersion = "1.0.0-alpha09"
+    ext.moshi = "1.4.0"
     repositories {
         google()
         jcenter()
