--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,44 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.11'
-    ext.navigationVersion = "1.0.0-alpha09"
-    ext.moshi = "1.4.0"
+    ext {
+        applicationId = "com.tpaga.productstopay"
+
+        //Sdk and tools
+        compileSdkVersion = 28
+        minSdkVersion = 15
+        targetSdkVersion = 28
+
+        //versions
+        versionCode = 1
+        versionName = "1.0"
+
+        //supports
+        gradle = '3.3.0'
+        kotlinVersion = '1.3.11'
+        navigationVersion = "1.0.0-alpha09"
+        moshi = "1.4.0"
+        appcompat = '1.0.0-beta01'
+        androidxCore = '1.1.0-alpha03'
+        constraintlayout = '1.1.3'
+        legacySupport = '1.0.0'
+        lifecycleExtensions = '2.0.0-beta01'
+        lifecycleViewmodel = '2.0.0'
+
+        //test
+        junit = '4.12'
+        runner = '1.1.1'
+        espresso = '3.1.1'
+    }
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.android.tools.build:gradle:$gradle"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
@@ -22,7 +46,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
