[Progress] New advance. -Create module for dependency injection with koin. -Add lottie animation. -Add application for init koin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,18 @@ dependencies {
     implementation "android.arch.navigation:navigation-fragment-ktx:$rootProject.navigationVersion"
     implementation "android.arch.navigation:navigation-ui-ktx:$rootProject.navigationVersion"
 
+    //network
+    implementation "com.squareup.retrofit2:retrofit:$rootProject.retrofit"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$rootProject.retrofit"
+    implementation "com.squareup.retrofit2:converter-moshi:$rootProject.retrofit"
+    implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.loggingInterceptor"
     implementation "com.squareup.moshi:moshi:$rootProject.moshi"
+    implementation "io.reactivex.rxjava2:rxandroid:$rootProject.rxandroid"
+
+    //dependency injection
+    implementation "org.koin:koin-core:$rootProject.koinVersion"
+    implementation "org.koin:koin-android:$rootProject.koinVersion"
+    implementation "org.koin:koin-android-viewmodel:$rootProject.koinVersion"
+    implementation "org.koin:koin-java:$rootProject.koinJava"
+    implementation "com.airbnb.android:lottie:$rootProject.lottie"
 }
