--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
+            android:name=".app.App"
             android:theme="@style/AppTheme">
         <activity android:name=".presentation.MainActivity">
             <intent-filter>
@@ -15,7 +16,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-            <nav-graph android:value="@navigation/products_to_pay_navigation" />
+            <nav-graph android:value="@navigation/products_to_pay_navigation"/>
         </activity>
     </application>
 
