--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
 
         //Sdk and tools
         compileSdkVersion = 28
-        minSdkVersion = 15
+        minSdkVersion = 16
         targetSdkVersion = 28
 
         //versions
@@ -17,7 +17,6 @@ buildscript {
         gradle = '3.3.0'
         kotlinVersion = '1.3.11'
         navigationVersion = "1.0.0-alpha09"
-        moshi = "1.4.0"
         appcompat = '1.0.0-beta01'
         androidxCore = '1.1.0-alpha03'
         constraintlayout = '1.1.3'
@@ -29,6 +28,21 @@ buildscript {
         junit = '4.12'
         runner = '1.1.1'
         espresso = '3.1.1'
+
+        //network
+        retrofit = "2.4.0"
+        loggingInterceptor = "3.11.0"
+        moshi = "1.4.0"
+        rxandroid = "2.0.1"
+
+        //di
+        koinVersion = "1.0.1"
+        koinJava = "1.0.1"
+
+        //animation
+        lottie = "3.0.0-beta1"
+
+
     }
     repositories {
         google()
